<resources>
    <string name="app_name">Globetrotter</string>
    <string name="password">Password</string>
    <string name="email_addres">Email addres</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="neptun">Mohammaderfan Koupaei,HZV17L,2022</string>
    <string name="glabetrotter">GLABETROTTER</string>
    <string name="logo">logo</string>
    <string name="logo_pic">app/src/main/ic_launcher-playstore.png</string>
    <string name="error">can not be empty</string>
    <string name="title_activity_country_list">CountryListActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

    </string>
    <string name="About">About</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="logout">LOGOUT</string>
    <string name="delete">DELETE</string>
</resources>